fix(security): whitelist Vercel domain in CORS and update error messages